@@ -30,7 +30,6 @@ import static org.easymock.EasyMock.verify;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
 import java.io.File;
 import java.io.IOException;
@@ -54,6 +53,7 @@ import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.dataImpl.KeyExtent;
 import org.apache.accumulo.core.file.rfile.bcfile.Compression;
+import org.apache.accumulo.core.file.rfile.bcfile.CompressionAlgorithm;
 import org.apache.accumulo.core.file.rfile.bcfile.Utils;
 import org.apache.accumulo.core.file.streams.SeekableDataInputStream;
 import org.apache.accumulo.core.util.Pair;
@@ -113,8 +113,7 @@ public class SortedLogRecoveryTest {
 
     @Override
     public boolean equals(Object obj) {
-      return this == obj
-          || (obj != null && obj instanceof KeyValue && 0 == compareTo((KeyValue) obj));
+      return this == obj || (obj instanceof KeyValue && 0 == compareTo((KeyValue) obj));
     }
 
     @Override
@@ -142,7 +141,7 @@ public class SortedLogRecoveryTest {
         result.key.tablet = (KeyExtent) fileExtentMutation;
         break;
       case MUTATION:
-        result.value.mutations = Arrays.asList((Mutation) fileExtentMutation);
+        result.value.mutations = List.of((Mutation) fileExtentMutation);
         break;
       case MANY_MUTATIONS:
         result.value.mutations = Arrays.asList((Mutation[]) fileExtentMutation);
@@ -346,16 +345,15 @@ public class SortedLogRecoveryTest {
   }
 
   @Test
-  public void testMissingDefinition() {
+  public void testMissingDefinition() throws IOException {
     // Create a test log
     KeyValue[] entries = {createKeyValue(OPEN, 0, -1, "1"),};
     Map<String,KeyValue[]> logs = new TreeMap<>();
     logs.put("testlog", entries);
     // Recover
-    try {
-      recover(logs, extent);
-      fail("tablet should not have been found");
-    } catch (Throwable t) {}
+    List<Mutation> mutations = recover(logs, extent);
+    // Verify recovered data
+    assertEquals(0, mutations.size());
   }
 
   @Test
@@ -820,8 +818,7 @@ public class SortedLogRecoveryTest {
     Map<String,KeyValue[]> logs = new TreeMap<>();
     logs.put("entries", entries);
 
-    HashSet<String> filesSet = new HashSet<>();
-    filesSet.addAll(Arrays.asList(tabletFiles));
+    HashSet<String> filesSet = new HashSet<>(Arrays.asList(tabletFiles));
     List<Mutation> mutations = recover(logs, filesSet, extent, bufferSize);
 
     if (startMatches) {
@@ -892,7 +889,7 @@ public class SortedLogRecoveryTest {
   }
 
   @Test
-  public void testConsecutiveCompactionFinishEvents() throws IOException {
+  public void testConsecutiveCompactionFinishEvents() {
     Mutation m1 = new ServerMutation(new Text("r1"));
     m1.put("f1", "q1", "v1");
 
@@ -1048,7 +1045,7 @@ public class SortedLogRecoveryTest {
   }
 
   @Test
-  public void testFileWithoutOpen() throws IOException {
+  public void testFileWithoutOpen() {
     Mutation m1 = new ServerMutation(new Text("r1"));
     m1.put("f1", "q1", "v1");
 
@@ -1077,12 +1074,8 @@ public class SortedLogRecoveryTest {
     // test all the possible properties for tserver.sort.file. prefix
     String prop = Property.TSERV_WAL_SORT_FILE_PREFIX + "invalid";
     testConfig.set(prop, "snappy");
-    try {
-      new LogSorter(context, testConfig);
-      fail("Did not throw IllegalArgumentException for " + prop);
-    } catch (IllegalArgumentException e) {
-      // valid for test
-    }
+    assertThrows("Did not throw IllegalArgumentException for " + prop,
+        IllegalArgumentException.class, () -> new LogSorter(context, testConfig));
   }
 
   @Test
@@ -1148,9 +1141,8 @@ public class SortedLogRecoveryTest {
    * Pulled from BCFile.Reader()
    */
   private final Utils.Version API_VERSION_3 = new Utils.Version((short) 3, (short) 0);
-  private final String defaultPrefix = "data:";
 
-  private Compression.Algorithm getCompressionFromRFile(FSDataInputStream fsin, long fileLength)
+  private CompressionAlgorithm getCompressionFromRFile(FSDataInputStream fsin, long fileLength)
       throws IOException {
     try (var in = new SeekableDataInputStream(fsin)) {
       int magicNumberSize = 16; // BCFile.Magic.size();
@@ -1170,6 +1162,7 @@ public class SortedLogRecoveryTest {
       assertTrue(count > 0);
 
       String fullMetaName = Utils.readString(in);
+      String defaultPrefix = "data:";
       if (fullMetaName != null && !fullMetaName.startsWith(defaultPrefix)) {
         throw new IOException("Corrupted Meta region Index");
       }
